--- a/index.html
+++ b/index.html
@@ -62,4 +62,22 @@
 
     <script src="index.js"></script>
   </body>
+
+  <footer>
+                
+    <div class="ftr-content">
+        <div class="contact">
+        </div>
+        <div class="ftr">
+            <a>Gift Card Terms</a>
+            <a>Terms of Use</a>
+            <a>Privacy Statement</a>
+            <a>Contact</a>
+
+        </div>
+        </div>
+    </div>
+   
+</footer>
 </html>
+
